# opentimelane

./: .gitignore  CMakeLists.txt  README.md  mix.exs
config/: config.exs  prod.exs  test.exs
lib/: datastore.ex  event_logger.ex  logger_utils.ex  opentimelane.ex
lib/fifo_input/: sup.ex  worker.ex
lib/log/: sup.ex  worker.ex
lib/pub_sub/: helpers.ex  pub_sub.ex
lib/web/: app_router.ex  asset_server.ex  sup.ex  web.ex  websocket_worker.ex
lib/web/handlers/: api.ex  root.ex  websocket.ex
lib/web/plugs/: range.ex
lib/web/ui/: static_assets.ex
lib/web/utils/: mime.ex
scripts/: build.sh  clean.sh  do_build.sh
src/: CMakeLists.txt  event_listener_interface.hpp  fifo_reader.cpp  fifo_reader.hpp  main.cpp  message_handler_interface.hpp  reader_interface.hpp  reader_manager.cpp  reader_manager.hpp
src/interfaces/: event_listener_interface.hpp  message_handler_interface.hpp  reader_interface.hpp
src/readers/: fifo_reader.cpp  fifo_reader.hpp  reader_interface.hpp
src/utils/: buffer.hpp  debug.cpp  debug.hpp  json.hpp  rwlock_interface.hpp  string_utils.cpp  string_utils.hpp
src/web/: event_listener.cpp  event_listener.hpp
templates/: named_worker.template  s141_sup.template  s141_worker.template  vanilla_sup.template
test/: opentimelane_test.exs
tests/: CMakeLists.txt  main.cpp  test_fifo_reader.cpp
ui/public/: index.html
